--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: configure
-      run: .config
+      run: config.buildinfo
       
     - name: Install dependencies
       run: make
