--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -22,8 +22,8 @@ on:
 env:
   REPO_URL: https://github.com/kitsune12346/lede/
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.buildinfo
-  CONFIG_FILE: config.buildinfo
+  FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
